# web3client

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  TODO.md  ape-config.yaml  conftest.py  package-lock.json  package.json  pyproject.toml
examples/: filter_blocks.py  filter_pending_txs.py  get_balance.py  get_balance_of.py  get_latest_block.py  get_nonce.py  get_token_balance.py  stream_blocks.py  stream_pending_txs.py  stream_pending_txs_async.py
scripts/: __init__.py  deploy_ceth.py  deploy_ctst.py
src/factory/: AvalancheCWeb3Client.py  SwimmerNetworkWeb3Client.py  Web3ClientFactory.py  clients.py  networks.py
src/web3client/: Erc20Web3Client.py  Web3Client.py  base_client.py  compound_v2_client.py  erc20_client.py  exceptions.py  orbiter_client.py  types.py
src/web3client/abi/: orbiter_maker_list.mainnet.json
src/web3client/helpers/: debug.py  subscribe.py  tx.py  websockets.py
src/web3client/middlewares/: log_middleware.py  rpc_log_middleware.py
src/web3factory/: AvalancheCWeb3Client.py  SwimmerNetworkWeb3Client.py  Web3ClientFactory.py  clients.py  erc20_tokens.py  factory.py  networks.py  types.py
src/web3test/ape/fixtures/: base.py  compound_v2.py  erc20.py
src/web3test/ape/helpers/: compound_v2.py
src/web3test/web3client/fixtures/: __init__.py  base.py  compound_v2.py  dual.py  erc20.py
tests/: conftest.py  test_get_nonce.py  test_networks.py  test_read.py
tests/ape/: fixtures.py
tests/ape/contracts/compound-v2/: FixedPriceOracle.sol
tests/ape/contracts/token/: Token.sol  Token_SafeMath.sol
tests/ape/tests/: fixtures.py
tests/ape/tests/helpers/: compound_v2.py  token.py
tests/web3client/: fixtures.py  test_base_client.py  test_base_client_auto_detect_poa.py  test_base_client_poa.py  test_compound_v2_client.py  test_dual_client.py  test_erc20_client.py  test_log_middleware.py  test_parse_tx.py  test_rpc_log_middleware.py  test_sign.py
tests/web3factory/: README.md  fixtures.py  test_networks.py
