[project]
name = "web3client"
version = "0.4.3"
description = "Batteries-included client to interact with blockchains and smart contracts"
authors = [
    {name = "coccoinomane", email = "coccoinomane@gmail.com"},
]
readme = "README.md"
keywords = ["web3", "blockchain", "ethereum", "evm"]
license = {text = "MIT"}
requires-python = ">=3.10,<4"
dependencies = [
    "web3>=5.31.1,<6.0.0",
    "eth-typing>=2.3.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=6",
    "mypy>=0.982",
]

[tool.pdm.scripts]
test = "pytest tests"
publish_test = "pdm publish -r testpypi -u ${PDM_PUBLISH_TEST_USERNAME} -P ${PDM_PUBLISH_TEST_PASSWORD}"

[project.urls]
homepage = "https://github.com/coccoinomane/web3client"
repository = "https://github.com/coccoinomane/web3client"

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.build]
includes = ["src"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 88

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = false
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_any_unimported = false
disallow_untyped_calls = true
exclude = [
    '__pypackages__',
]