[project]
name = "web3client"
version = "1.1.5"
description = "Batteries-included client to interact with blockchains and smart contracts"
authors = [
    {name = "coccoinomane", email = "coccoinomane@gmail.com"},
]
readme = "README.md"
keywords = ["web3", "blockchain", "ethereum", "evm"]
license = {text = "MIT"}
requires-python = ">=3.9,<3.11"
dependencies = [
    "web3>=6.0.0",
    "eth-typing>=2.3.0",
    "setuptools>=67.2.0",
    "typing-extensions>=4.4.0",
    "pre-commit>=2.21.0",
    "websockets>=10.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.982",
    "eth-ape[recommended-plugins]>=0.6.0",
    "isort>=5.11.3",
    "pre-commit>=2.20.0",
    "autoflake>=2.0.0",
    "black>=22.10",
]

[tool.pdm.scripts]
test = "ape test tests"
publish_test = "pdm publish -r testpypi -u ${PDM_PUBLISH_TEST_USERNAME} -P ${PDM_PUBLISH_TEST_PASSWORD}"
release = "gh release create v{args} dist/web3client-{args}.tar.gz dist/web3client-{args}-py3-none-any.whl --generate-notes"

[project.urls]
homepage = "https://github.com/coccoinomane/web3client"
repository = "https://github.com/coccoinomane/web3client"

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.build]
includes = ["src"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 88

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = false
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_any_unimported = false
disallow_untyped_calls = true
exclude = [
    '__pypackages__',
]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.autoflake]
in_place = true
remove_all_unused_imports = true
ignore_pass_after_docstring = true
remove_unused_variables = false
